--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
 blinker==1.9.0
-colorama==0.4.6
-eventlet==0.40.1
-flask==3.1.1
-flask-socketio==5.5.1
+certifi==2025.7.14
+charset-normalizer==3.4.3
+click==8.1.8
+Flask==3.1.2
+idna==3.10
 itsdangerous==2.2.0
-jinja2==3.1.6
-markupsafe==3.0.2
-werkzeug==3.1.3
+Jinja2==3.1.6
+MarkupSafe==3.0.2
+poetry==2.1.4
+requests==2.32.4
+urllib3==2.5.0
+Werkzeug==3.1.3
